--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container">
             <h1>Welcome to My GitHub Page</h1>
             <h2>About Me</h2>
-            <p>Hello, I'm John Doe, a web developer and open source enthusiast. Welcome to my GitHub page where I showcase my projects and share my coding journey.</p>
+            <p>Hello, I'm Dustin Marshall, a web developer and open source enthusiast. Welcome to my GitHub page where I showcase my projects and share my coding journey.</p>
         </div>
     </body>
 </html>
