--- a/index.html
+++ b/index.html
@@ -1,33 +1,48 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>My GitHub Page</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <style>
-            body {
-                font-family: Arial, sans-serif;
-                margin: 0;
-                padding: 0;
-                background-color: #f0f0f0;
-            }
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Data Scientist Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to My Data Science Portfolio</h1>
+        <p>Here you can find my projects, blog posts, and contact information.</p>
+    </header>
 
-            .container {
-                width: 80%;
-                margin: 0 auto;
-                padding: 20px;
-            }
+    <section id="about-me">
+        <h2>About Me</h2>
+        <p>I am a data scientist with expertise in machine learning, AI, and statistics. I am passionate about turning raw data into meaningful insights.</p>
+    </section>
 
-            h1, h2 {
-                color: #333;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="container">
-            <h1>Welcome to My GitHub Page</h1>
-            <h2>About Me</h2>
-            <p>Hello, I'm Dustin Marshall, a web developer and open source enthusiast. Welcome to my GitHub page where I showcase my projects and share my coding journey.</p>
-        </div>
-    </body>
+    <section id="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li><a href="project1.html">Project 1: Predictive Modelling for Sales Data</a></li>
+            <li><a href="project2.html">Project 2: Text Classification with NLP</a></li>
+            <!-- More projects can be added here -->
+        </ul>
+    </section>
+
+    <section id="blog">
+        <h2>Blog</h2>
+        <ul>
+            <li><a href="blog1.html">Blog Post 1: Understanding Neural Networks</a></li>
+            <li><a href="blog2.html">Blog Post 2: Practical Tips for Feature Selection</a></li>
+            <!-- More blog posts can be added here -->
+        </ul>
+    </section>
+
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>Email: your-email@example.com</p>
+        <p>LinkedIn: <a href="your-linkedin-link">My LinkedIn Profile</a></p>
+    </section>
+
+    <footer>
+        <p>Copyright &copy; 2023 by Your Name</p>
+    </footer>
+</body>
 </html>
